@@ -4,6 +4,7 @@
   an unspecified order
 * Fix several serious bugs in caching/invalidation of materialized operator
   state (#276)
+* Avoid possible spurious infinite loop with dbm-backed collections
 * Fix REBL regression with push-based runtime (#274)
 * Minor performance optimizations
 * Built-in support for code coverage with MRI 1.9 and SimpleCov
